# Hash-Lang

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DISCORD_SETUP_GUIDE.md  LICENSE  README.md  RELEASE_NOTES.md  STORY.md  WHATS_NEXT.md  build.ps1  hash.ps1  install.ps1  install_syntax.ps1  setup-wizard.ps1
docs/: ARCHITECTURE.md  BUILD_OUTPUT.md  BUILTINS.md  CLI_GUIDE.md  CODE_COMPLETION.md  COMPLETE_GUIDE.md  ERROR_HANDLING.md  GETTING_STARTED.md  INSTALLATION.md  POST_INSTALL_CHECKLIST.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START_CARD.md  README.md  SETUP_WIZARD.md  SPEC.md  SYNTAX_COLORS.md
examples/: 00_hello.hash  01_basics.hash  02_control_flow.hash  03_functions.hash  04_pure_functions.hash  05_algorithms.hash  06_types.hash  07_recursion.hash  08_patterns.hash  09_builtins.hash  10_pythonic_syntax.hash  11_interactive.hash  12_advanced_math.hash  13_edge_cases.hash  14_error_guide.hash  15_trigonometry.hash  16_logarithms.hash  17_random.hash  18_timing.hash  19_guessing_game.hash  20_strings.hash  21_text_processor.hash  22_file_io.hash  23_error_handling.hash  comprehensive.hash  fibonacci.hash  hello.hash  pure_functions.hash  syntax_showcase.hash  types.hash
src/: README.md  ast.cpp  ast.h  codegen.cpp  codegen.h  error_reporter.cpp  error_reporter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  semantic.cpp  semantic.h
